Fix saving tables, and save light/dark mode

--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 .wordsearch td{
     text-align: center;
     font-size: calc(10px + 1vw);
@@ -63,17 +62,17 @@ button {
 
 #popups {
     text-align: center;
+    position: absolute;
+    z-index: 2;
+    top: 2vh;
+    left: 0;
+    width: 100vw;
 }
 
 .popup {
     display: none;
-    position: absolute;
     background-color: #DDDDDD;
-    z-index: 2;
-    margin: 0 auto;
-    width: 40vw;
-    left: 30vw;
-    top: 20vh;
+    padding: 4px;
 }
 
 h3 {
@@ -120,4 +119,30 @@ li:hover {
 
 .none {
     display: none;
+}
+
+.goandsee {
+    cursor: pointer;
+}
+
+.dltbtns {
+    padding: 5px;
+    width: 6vw;
+    font-size: calc(7px + .7vw);
+}
+
+#savedTables {
+    margin: 0 auto;
+}
+
+.invert {
+    filter: invert(100%);
+}
+
+#everything {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
 }
